--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,8 @@ body {
   overflow-x: hidden;
   background: #e6e7e6;
   font-family: "HakgyoansimWoojuR";
+  /*cursor: url("https://blog.kakaocdn.net/dn/BQXpN/btq3qNR67Lg/8tx8tGzkOcr5BuX5dyIaKk/img.png"),
+    auto;*/
 
   /*background: url(../img/blue-5136251.jpg) no-repeat;
   width: 100%;
@@ -36,6 +38,86 @@ ul {
 a {
   text-decoration: none;
   cursor: pointer;
+}
+/*animation*/
+@keyframes move1 {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(15px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes move2 {
+  0% {
+    transform: translate(9px, 0);
+    opacity: 1;
+  }
+  15% {
+    transform: translate(9px, 15px);
+    opacity: 1;
+  }
+  50% {
+    transform: translate(9px, 15px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(9px, 0);
+    opacity: 0;
+  }
+}
+@keyframes bounce {
+  0% {
+    transform: translate(-7px, -15px);
+  }
+
+  100% {
+    transform: translate(5px, 50px);
+  }
+}
+@keyframes up {
+  0% {
+    transform: translateY(50px);
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+@keyframes left {
+  0% {
+    transform: translateX(-150px);
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+@keyframes right {
+  0% {
+    transform: translateX(250px);
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+@keyframes animate1 {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.15);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 /*header*/
@@ -121,6 +203,8 @@ header {
   position: absolute;
   top: 12vw;
   left: 10vw;
+  opacity: 0;
+  animation: up 1.2s 0.5s forwards;
 }
 .visualtext_1 img {
   width: 100%;
@@ -130,6 +214,8 @@ header {
   position: absolute;
   top: 18vw;
   left: 10vw;
+  opacity: 0;
+  animation: up 1.2s 0.8s forwards;
 }
 .visualtext_2 img {
   width: 100%;
@@ -139,6 +225,8 @@ header {
   top: 15vw;
   left: 45vw;
   z-index: 111;
+  opacity: 0;
+  animation: up 1.2s 1.2s forwards;
 }
 .visualimg img {
   width: 100%;
@@ -154,6 +242,8 @@ header {
 .scroll p {
   color: #707070;
   font-size: 0.8vw;
+  opacity: 0;
+  animation: up 1.2s 1.5s forwards;
 }
 
 .mouse {
@@ -164,18 +254,10 @@ header {
   border-radius: 23px;
   margin: 10px auto;
   animation: move1 2s linear infinite;
+  opacity: 0;
+  animation: up 1.2s 2s forwards;
 }
-@keyframes move1 {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(15px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
+
 .mouse .point {
   width: 4px;
   height: 4px;
@@ -184,24 +266,7 @@ header {
   animation: move2 3s linear infinite;
   border-radius: 50%;
 }
-@keyframes move2 {
-  0% {
-    transform: translate(9px, 0);
-    opacity: 1;
-  }
-  15% {
-    transform: translate(9px, 15px);
-    opacity: 1;
-  }
-  50% {
-    transform: translate(9px, 15px);
-    opacity: 0;
-  }
-  100% {
-    transform: translate(9px, 0);
-    opacity: 0;
-  }
-}
+
 /*circle*/
 
 .circle_1 {
@@ -215,15 +280,7 @@ header {
 
   animation: bounce 2s infinite ease-in-out alternate;
 }
-@keyframes bounce {
-  0% {
-    transform: translate(-7px, -15px);
-  }
 
-  100% {
-    transform: translate(5px, 50px);
-  }
-}
 .circle_2 {
   position: absolute;
   top: 5%;
@@ -323,6 +380,10 @@ header {
   top: -3vw;
   left: 5vw;
   border-bottom: 2px solid #585858;
+  opacity: 0;
+}
+#con1 h2.on {
+  animation: left 1s 0.5s ease-out forwards;
 }
 
 .ogc1 {
@@ -340,12 +401,21 @@ header {
   background: #b3b3b3;
   position: relative;
   margin-top: 10vw;
+  opacity: 0;
 }
+.box1.on {
+  animation: left 1s 0.8s ease-out forwards;
+}
+
 .con1_1 .me2 {
   width: 20vw;
   position: absolute;
   left: 32vw;
   top: 2vw;
+  opacity: 0;
+}
+.con1_1 .me2.on {
+  animation: up 1s 1.7s ease-out forwards;
 }
 .con1_1 .me2 img {
   width: 100%;
@@ -362,8 +432,11 @@ header {
   align-items: center;
   justify-content: center;
   margin: 1.5vw auto 0;
+  opacity: 0;
 }
-
+.about_me .me1.on {
+  animation: up 1s 1s ease-out forwards;
+}
 .about_me .me1:first-child {
   margin: 5vw auto 0;
 }
@@ -427,6 +500,10 @@ header {
   position: absolute;
   left: 12vw;
   bottom: 2.2vw;
+  opacity: 0;
+}
+.click.on {
+  animation: up 1s 1s ease-out forwards;
 }
 .click a {
   color: #fff;
@@ -441,10 +518,14 @@ header {
 }
 .box1 h4 {
   position: absolute;
-  left: 12vw;
+  left: 12.2vw;
   bottom: 5vw;
-  font-size: 0.8vw;
+  font-size: 1vw;
   color: #333;
+  opacity: 0;
+}
+.box1 h4.on {
+  animation: animate1 2s 2s infinite;
 }
 
 .box2 {
@@ -454,6 +535,10 @@ header {
   position: relative;
   margin-top: 12vw;
   border-radius: 2vw 0% 0% 2vw;
+  opacity: 0;
+}
+.box2.on {
+  animation: right 1s 0.8s ease-out forwards;
 }
 .box2 h3 {
   font-family: "cooper-black-std", serif;
@@ -465,12 +550,21 @@ header {
   top: -2.5vw;
   left: 20vw;
   border-bottom: 2px solid #585858;
+  opacity: 0;
 }
+.box2 h3.on {
+  animation: right 1s 0.5s ease-out forwards;
+}
+
 .box2 h4 {
   position: absolute;
   top: 2.5vw;
   left: 24vw;
   font-size: 1vw;
+  opacity: 0;
+}
+.box2 h4.on {
+  animation: animate1 2s 2s infinite;
 }
 .box2 ul {
   list-style: none;
@@ -480,8 +574,11 @@ header {
   flex-wrap: wrap;
   margin: 0px auto;
   padding-top: 3.5vw;
+  opacity: 0;
 }
-
+.box2 ul.on {
+  animation: up 1s 1s ease-out forwards;
+}
 .card1 {
   width: 25%;
   border-radius: 50%;
@@ -561,6 +658,10 @@ header {
   top: 3vw;
   left: 5vw;
   border-bottom: 2px solid #585858;
+  opacity: 0;
+}
+#con2 > h2.on {
+  animation: left 1s 0.5s ease-out forwards;
 }
 .con2_1 {
   width: 800px;
@@ -575,6 +676,7 @@ header {
   align-items: center;
   justify-items: center;
 }
+
 .computer {
   position: absolute;
   top: 10%;
@@ -584,6 +686,10 @@ header {
   overflow: hidden;
   z-index: 66;
   max-height: 35vw;
+  opacity: 0;
+}
+.computer.on {
+  animation: up 1s 1s ease-out forwards;
 }
 .computer img {
   width: 100%;
@@ -629,23 +735,26 @@ header {
   width: 30vw;
   height: 23vw;
   position: absolute;
-  left: 55%;
+  left: 56%;
   top: 31%;
   z-index: 11;
   background: #c8c8c8;
   border-radius: 5%;
   overflow: hidden;
   box-shadow: 5px 15px 15px 5px #666565;
+  opacity: 0;
+}
+.con2_2.on {
+  animation: up 1s 1s ease-out forwards;
 }
 .text2 {
   display: flex;
   width: 500%;
-  margin: 0 auto;
+  margin: 5vw auto;
   text-align: center;
 }
 .text2 li {
   width: 100%;
-  margin: 2% auto;
 }
 .text2 h2 {
   margin-bottom: 2vw;
@@ -659,16 +768,27 @@ header {
 }
 
 .more {
-  position: absolute;
-  left: 35%;
-  bottom: 15%;
-  width: 10vw;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 5vw auto;
+}
+.more li {
+  width: 8vw;
   padding: 0.5vw;
+
   border: 1px solid #fff;
+  align-items: center;
+}
+.more li:nth-of-type(1) {
+  margin-right: 1vw;
+  margin-left: 1.5vw;
 }
 .more a {
   color: #fff;
   font-size: 0.8vw;
+  height: 0.5vw;
+  line-height: 0.5vw;
 }
 
 .slidecon a {
@@ -701,6 +821,10 @@ header {
   top: 3vw;
   left: 5vw;
   border-bottom: 2px solid #585858;
+  opacity: 0;
+}
+#con3 > h2.on {
+  animation: left 1s 0.5s ease-out forwards;
 }
 #con3 > h4 {
   font-size: 1vw;
@@ -708,12 +832,21 @@ header {
   position: absolute;
   top: 10vw;
   left: 80vw;
+  opacity: 0;
 }
+#con3 > h4.on {
+  animation: animate1 2s 2s infinite;
+}
+
 .con3_1 {
   width: 80%;
   height: 100%;
   margin: 0px auto;
   position: relative;
+  opacity: 0;
+}
+.con3_1.on {
+  animation: up 1s 1s ease-out forwards;
 }
 .large {
   width: 100%;
