--- a/css/index2.css
+++ b/css/index2.css
@@ -3,10 +3,12 @@
   padding: 0px;
   box-sizing: border-box;
 }
+
 body {
   overflow-x: hidden;
   background: #e6e7e6;
   font-family: "HakgyoansimWoojuR";
+  -webkit-font-smoothing: antialiased;
 }
 ::-webkit-scrollbar {
   width: 15px; /* 세로축 스크롤 바 길이 */
@@ -34,13 +36,14 @@ a {
 }
 @keyframes up {
   0% {
-    transform: translateY(50px);
+    transform: translateY(80px);
   }
   100% {
     transform: translateY(0px);
     opacity: 1;
   }
 }
+
 @keyframes bounce {
   0% {
     transform: translate(-7px, -15px);
@@ -50,27 +53,48 @@ a {
     transform: translate(5px, 50px);
   }
 }
+
+@keyframes typing {
+  0% {
+    width: 0%;
+    opacity: 1;
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
+}
+@keyframes animate1 {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.15);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 /*프로필1*/
 #frofile {
   width: 100%;
-  height: 100%;
+  position: relative;
 }
 #fro1 {
   width: 100%;
   height: 100vh;
-
   position: relative;
 }
-
 #fro1 h2:nth-of-type(1) {
   position: absolute;
+  opacity: 0;
   top: 5vw;
   left: 5vw;
-  opacity: 0;
-  z-index: 2;
-}
-#fro1 h2:nth-of-type(1) {
   animation: up 1s 0.5s ease-out forwards;
+  z-index: 2;
 }
 #fro1 h2:nth-of-type(2) {
   position: absolute;
@@ -80,39 +104,55 @@ a {
   animation: up 1s 1s ease-out forwards;
   z-index: 2;
 }
-#fro1 h2 img {
-  width: 100%;
-}
+
 #fro1 h4:nth-of-type(1) {
   position: absolute;
   top: 20vw;
   right: 5vw;
   font-size: 1.8vw;
-  opacity: 0;
+  z-index: 2;
   color: #585858;
   animation: up 1s 1.5s ease-out forwards;
-  z-index: 2;
+  opacity: 0;
 }
+
 #fro1 h4:nth-of-type(2) {
   position: absolute;
   top: 23vw;
   right: 5vw;
   font-size: 1.8vw;
-  opacity: 0;
   color: #585858;
-  animation: up 1s 1.7s ease-out forwards;
   z-index: 2;
+  animation: up 1s 1.8s ease-out forwards;
+  opacity: 0;
 }
 
 #fro1 h3 {
-  position: absolute;
-  bottom: 6vw;
-  left: 30%;
-  z-index: 2;
-  font-size: 2vw;
   color: #585858;
+  font-size: 2vw;
+  min-width: 11px;
+  white-space: nowrap;
+  margin: 0;
+
+  color: transparent;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  position: fixed;
+}
+
+#fro1 h3::before {
+  content: "신입 웹퍼블리셔를 지원하는 지원자 천주혜 입니다.";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #585858;
+  overflow: hidden;
+  border-right: 1px solid #585858;
+  animation: typing 3s 2.2s steps(31) forwards;
   opacity: 0;
-  animation: up 1s 2s ease-out forwards;
 }
 .circle_1 {
   position: absolute;
@@ -167,21 +207,236 @@ a {
   animation: bounce 2s infinite ease-in-out alternate;
 }
 /*프로필*/
-
 #fro2 {
   width: 100%;
-  height: 100%;
-  margin: 0px auto;
-}
-.fix {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: 100%;
+  height: 250vh;
   position: relative;
 }
-.fix > li:nth-of-type(1) {
+.fro2_text {
+  width: 50%;
+  height: 100vh;
+  background: #c0c4c5;
+  text-align: center;
+  padding: 2vw;
+  display: none;
+  position: absolute;
+  left: 0;
+  z-index: 99;
+}
+.name {
+  padding-top: 10vw;
+}
+.name h2 {
+  font-size: 1.3vw;
+  margin-bottom: 1vw;
+}
+.name h3 {
+  font-size: 1vw;
+  margin-bottom: 1vw;
+}
+.fro2_text.on {
+  position: fixed;
+  display: block;
+  animation: up 0.5s forwards;
+  transition: 3s;
+}
+
+.fro2_text2 {
+  width: 50%;
+  position: absolute;
+  right: 0;
+}
+
+.fro2_1 {
   width: 100%;
-  height: 100%;
-  background: #222;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 8vw;
+  display: none;
+}
+.fro2_1.on {
+  animation: up 2s forwards;
+  display: block;
+}
+.fro2_1 .fro2_box1 {
+  width: 80%;
+  height: 20vw;
+  background: #e7e1e0;
+  border-radius: 2vw;
+  position: absolute;
+  left: 6vw;
+  top: 10vw;
+  padding: 3vw;
+}
+.fro2_1 .fro2_box1 h2 {
+  font-size: 2.2vw;
+  color: #585858;
+}
+.fro2_1 .fro2_box1 p {
+  width: 60%;
+  text-align: left;
+  padding-top: 2vw;
+  font-size: 1vw;
+  color: #585858;
+  line-height: 1.5vw;
+}
+.fro2_1 .fro2_box2 {
+  width: 35%;
+  position: absolute;
+  right: 0;
+}
+.fro2_box2 img {
+  width: 100%;
+}
+
+.fro2_2 {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 8vw;
+  opacity: 0;
+  width: 100%;
+}
+.fro2_2.on {
+  animation: up 2s forwards;
+  display: block;
+}
+.fro2_2 .fro2_box1 {
+  width: 80%;
+  height: 20vw;
+  background: #dadbda;
+  border-radius: 2vw;
+  position: absolute;
+  left: 6vw;
+  top: 50vw;
+  padding: 3vw;
+}
+
+.fro2_2 .fro2_box1 h2 {
+  font-size: 2.2vw;
+  color: #585858;
+}
+.fro2_2 .fro2_box1 p {
+  width: 60%;
+  text-align: left;
+  padding-top: 2vw;
+  font-size: 1vw;
+  color: #585858;
+  line-height: 1.5vw;
+}
+.fro2_2 .fro2_box2 {
+  width: 35%;
+  position: absolute;
+  right: 0;
+  top: 48vw;
+}
+
+.fro2_3 {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 8vw;
+  opacity: 0;
+  width: 100%;
+}
+.fro2_3.on {
+  animation: up 2s forwards;
+  display: block;
+}
+.fro2_3 .fro2_box1 {
+  width: 80%;
+  height: 20vw;
+  background: #d7e0e0;
+  border-radius: 2vw;
+  position: absolute;
+  left: 6vw;
+  top: 80vw;
+  padding: 3vw;
+}
+
+.fro2_3 .fro2_box1 h2 {
+  font-size: 2.2vw;
+  color: #585858;
+}
+.fro2_3 .fro2_box1 p {
+  width: 60%;
+  text-align: left;
+  padding-top: 2vw;
+  font-size: 1vw;
+  color: #585858;
+  line-height: 1.5vw;
+}
+.fro2_3 .fro2_box2 {
+  width: 35%;
+  position: absolute;
+  right: 0;
+  top: 78vw;
+}
+
+/*프로필4*/
+
+#fro3 {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+.fro3_box {
+  width: 40%;
+  height: 25vw;
+  background: #cacdce;
+  margin: 5vw auto;
+  border-radius: 2vw;
+  opacity: 0;
+}
+.fro3_text {
+  padding: 3vw;
+}
+.fro3_box h2 {
+  padding-top: 2vw;
+
+  font-size: 2.2vw;
+  color: #585858;
+}
+.fro3_box p {
+  padding-top: 2vw;
+
+  font-size: 1.2vw;
+  color: #585858;
+  text-align: left;
+  line-height: 2vw;
+}
+.fro3_box.on {
+  display: block;
+  animation: up 0.5s 1s forwards;
+}
+.footer {
+  background: #d9dfdf;
+  width: 100%;
+  height: 10vw;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+}
+.footer p {
+  font-size: 1.2vw;
+  padding-top: 3vw;
+  color: #585858;
+  animation: animate1 2s 2s infinite;
+}
+.footer .box {
+  width: 10%;
+  height: 2vw;
+  border: 1px solid #fff;
+  margin: 2vw auto;
+}
+.footer .box a {
+  color: #fff;
+  height: 2vw;
+  line-height: 2vw;
+  font-weight: 500;
+}
+.footer .box:hover {
+  background: #333;
+  border: 1px solid #333;
+}
+.footer .box:hover a {
+  color: #fff;
 }
