--- a/css/index.css
+++ b/css/index.css
@@ -119,7 +119,31 @@ a {
     opacity: 1;
   }
 }
+/*
+@keyframes blueBall {
+  0% {
+    width: 20px;
+    height: 20px;
+    opacity: 0;
+  }
+  30% {
+    width: 40px;
+    height: 40px;
+    opacity: 0.6;
+  }
 
+  70% {
+    width: 60px;
+    height: 60px;
+    opacity: 0.3;
+  }
+  100% {
+    width: 80px;
+    height: 80px;
+    opacity: 0;
+  }
+}
+*/
 /*header*/
 header {
   width: 100%;
@@ -204,7 +228,7 @@ header {
   top: 12vw;
   left: 10vw;
   opacity: 0;
-  animation: up 1.2s 0.5s forwards;
+  animation: left 1.2s 0.5s forwards;
 }
 .visualtext_1 img {
   width: 100%;
@@ -215,7 +239,7 @@ header {
   top: 18vw;
   left: 10vw;
   opacity: 0;
-  animation: up 1.2s 0.8s forwards;
+  animation: left 1.2s 0.8s forwards;
 }
 .visualtext_2 img {
   width: 100%;
@@ -499,16 +523,18 @@ header {
   text-align: center;
   position: absolute;
   left: 12vw;
-  bottom: 2.2vw;
+  bottom: 3.5vw;
   opacity: 0;
 }
 .click.on {
   animation: up 1s 1s ease-out forwards;
+  animation: animate1 2s 2s infinite;
 }
 .click a {
   color: #fff;
   font-size: 1vw;
 }
+
 .click:hover {
   background: #333;
   border: 1px solid #333;
@@ -516,6 +542,7 @@ header {
 .click:hover a {
   color: #fff;
 }
+/*
 .box1 h4 {
   position: absolute;
   left: 12.2vw;
@@ -527,7 +554,7 @@ header {
 .box1 h4.on {
   animation: animate1 2s 2s infinite;
 }
-
+*/
 .box2 {
   width: 43vw;
   height: 25vw;
@@ -556,16 +583,6 @@ header {
   animation: right 1s 0.5s ease-out forwards;
 }
 
-.box2 h4 {
-  position: absolute;
-  top: 2.5vw;
-  left: 24vw;
-  font-size: 1vw;
-  opacity: 0;
-}
-.box2 h4.on {
-  animation: animate1 2s 2s infinite;
-}
 .box2 ul {
   list-style: none;
   display: flex;
@@ -606,7 +623,9 @@ header {
   height: 5vw;
   border-radius: 50%;
   background: #dfc3c9;
+  animation: animate1 2s linear infinite;
 }
+
 .front img {
   width: 50%;
 
@@ -826,17 +845,6 @@ header {
 #con3 > h2.on {
   animation: left 1s 0.5s ease-out forwards;
 }
-#con3 > h4 {
-  font-size: 1vw;
-  color: #585858;
-  position: absolute;
-  top: 10vw;
-  left: 80vw;
-  opacity: 0;
-}
-#con3 > h4.on {
-  animation: animate1 2s 2s infinite;
-}
 
 .con3_1 {
   width: 80%;
@@ -895,16 +903,32 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 2vw;
+  filter: grayscale(0.8);
 }
 .small .big {
   width: 100%;
   height: 100%;
   overflow: hidden;
   border-radius: 2vw;
+  position: relative;
+}
+.small .big p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+  color: #fff;
+  font-size: 1.5vw;
+  display: none;
+}
+.small .big:hover p {
+  display: block;
 }
 .small img:hover {
   transform: scale(1.5);
   transition: 1.5s;
+  filter: grayscale(0);
 }
 .con3_1 a {
   width: 20px;
