--- a/css/index.css
+++ b/css/index.css
@@ -3178,7 +3178,7 @@ a {
 
   .circle_3 {
     position: absolute;
-    top: -2%;
+    top: 2%;
     left: 85%;
     background: #dadbda;
     z-index: 0;
@@ -3698,31 +3698,30 @@ a {
     max-height: 350px;
     position: relative;
     margin: 0px auto;
-    z-index: 55;
     display: none;
+    z-index: 99;
   }
 
   .small {
     width: 100%;
-    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     margin: 0px auto;
     padding-top: 25vw;
     position: absolute;
     top: 0;
     margin-bottom: 3vw;
     text-align: center;
-    z-index: 99;
   }
   .small li {
-    width: 80%;
-    height: 100px;
+    width: calc(100% / 2 - 10px);
     margin-bottom: 3vw;
     border-radius: 2vw;
     margin: 20px auto;
   }
   .small img {
     width: 100%;
-    height: 100%;
     border-radius: 2vw;
     filter: grayscale(0.8);
   }
@@ -3858,7 +3857,7 @@ a {
 
   #con4 .circle_2 {
     position: absolute;
-    top: 5%;
+    top: 8%;
     left: 30%;
     background: #e7e1e0;
     z-index: -1;
@@ -3872,7 +3871,7 @@ a {
 
   #con4 .circle_3 {
     position: absolute;
-    top: -2%;
+    top: 4%;
     left: 85%;
     background: #dadbda;
     z-index: 0;
@@ -3885,10 +3884,9 @@ a {
 
   #con4 .circle_4 {
     position: absolute;
-    bottom: 1%;
+    bottom: 35%;
     left: 70%;
     background: #e2dedf;
-
     width: 25vw;
     height: 25vw;
     border-radius: 50%;
